# 7SCW

./: .gitignore  7cpp.cpp  CMakeLists.txt  GITHUB_SETUP.md  LICENSE  QUICKSTART.md  README.md  SHOW_ALL_STARTUP.cpp  SHOW_ALL_STARTUP.h  main.cpp  simple_build.bat  terminal_commands.cpp  terminal_commands.h
cpp_file/: argv.cpp
cpp_file/activator/: load_script.cpp  menu.cpp
cpp_file/file/: clear_temp_file.cpp
cpp_file/file_manager/: file_manager.cpp
cpp_file/security/: advanced_security_menu.cpp  file_hash_verifier.cpp  log_viewer.cpp
cpp_file/startup/: SHOW_ALL_STARTUP.cpp  restoreStartupSettings.cpp  startup.cpp
cpp_file/terminal/: speed_test.cpp  terminal.cpp  terminal_commands.cpp
h_file/: argv.h  main.h
h_file/activator/: load_script.h  menu.h
h_file/file/: clear_temp_file.h
h_file/file_manager/: file_manager.h
h_file/security/: advanced_security_menu.h  file_hash_verifier.h  log_viewer.h
h_file/startup/: SHOW_ALL_STARTUP.h  restoreStartupSettings.h  startup.h
h_file/terminal/: speed_test.h  terminal.h  terminal_commands.h
